# compressed-chess-notation

./: Makefile.am  README.md  board.c  board.h  configure.ac  main.c  moves.c  moves.h  piece.c
.github/workflows/: c-cpp.yml
src/: board.c  board.h  main.c  moves.c  moves.h  piece.c  piece.h  utils.c  utils.h
