AC_INIT([ccp], [0.01])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/main.c], [src/moves.c], [src/board.c], [src/piece.c], [src/utils.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
# Put various checks and such here.

AC_OUTPUT
